Bugfix: Vector layer doesn't preserve nodetypes info

We had a mechanism to load nodetypes info but we didn't use it.

BUG:420531
BUG:418008